<resources>
    <string name="app_name">Hiker\'s App</string>
    <string name="action_settings">Settings</string>
    <string name="label_appTitle">Hiker\'s App</string>
    <string name="label_latitude">Latitude:</string>
    <string name="label_longitude">Longitude:</string>
    <string name="label_accuracy">Accuracy:</string>
    <string name="label_speed">Speed:</string>
    <string name="label_bearing">Bearing:</string>
    <string name="label_altitude">Altitude:</string>
    <string name="label_address">Address:</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_goToMap">Where am I?</string>
</resources>
